tests/baselines/reference/maxConstraints.errors.txt
tests/cases/compiler/maxConstraints.ts(5,6): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/maxConstraints.ts(8,22): error TS2345: Argument of type 'number' is not assignable to parameter of type 'Comparable<any>'.


==== tests/cases/compiler/maxConstraints.ts (2 errors) ====
    interface Comparable<T> {
        compareTo(other: T): number;
    }
    interface Comparer {
        <T extends Comparable<T>>(x: T, y: T): T;
         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }
    var max2: Comparer = (x, y) => { return (x.compareTo(y) > 0) ? x : y };
    var maxResult = max2(1, 2);
                         ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'Comparable<any>'.